Addition of more functionality Scientific Calc some styling is dis aligned but can be corrected in next commit

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  position: relative;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  transition: all 0.5s ease;
 }
 
 .container {
@@ -24,9 +26,9 @@ h1 {
   background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
   padding: 20px;
+  width: auto;
+  /* width: 80vw; */
 }
-
-
 
 input {
   width: 100%;
@@ -39,7 +41,28 @@ input {
 
 .buttons {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);    /* on more 4 => 8 */
+  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+}
+
+.numbers{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  
+  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+}
+.functions{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);  
+  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+}
+.more{ 
+  display: none;   
+  /* display: grid; */
+  grid-template-columns: repeat(2, 1fr);   
+  grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 10px;
   grid-row-gap: 15px;
 }
@@ -69,6 +92,36 @@ button:hover {
   background-color: #5b5b5b;
 }
 
+.delete{
+  background-color: #000;
+  color: #fff;
+}
+
+.result{
+  background-color: #000;
+  color: #fff;
+}
+
 .fa-delete-left{
   font-size: 1.3em;
+}
+
+.fa-flask{
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+.scientific{
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  background-color: #000;
+  color: #fff;
+  z-index: 9;
+}
+.scientific:hover{
+  background-color: #2f2f2f;
 }
